--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 asgiref==3.5.2
 beautifulsoup4==4.11.1
+dj-database-url==1.0.0
 Django==4.1.2
 django-bootstrap-v5==1.0.11
+django-heroku==0.3.1
 gunicorn==20.1.0
 psycopg2==2.9.4
 soupsieve==2.3.2.post1
